erm look now uhh we like take the mean and std

--- a/CMSC614_Language_Detection_Attack.ipynb
+++ b/CMSC614_Language_Detection_Attack.ipynb
@@ -34,8 +34,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-25T23:11:16.880755Z",
-     "start_time": "2024-11-25T23:11:14.948074Z"
+     "end_time": "2024-11-26T00:43:04.077435Z",
+     "start_time": "2024-11-26T00:43:02.371987Z"
     }
    },
    "execution_count": 1
@@ -63,7 +63,7 @@
     "args = {\"lang1\":'./data/englishpcaps', \"lang2\":'./data/spanishpcaps', \"passes\":5, \"batch\":1, \"learnrate\":0.1}\n",
     "\n",
     "\n",
-    "vocab = [(0, 0, 0, 0), (0, 0, 0, 1), (0, 0, 0, 2), (0, 0, 1, 0), (0, 0, 1, 1), (0, 0, 1, 2),\n",
+    "vocab = [(0, 0, 1, 0), (0, 0, 1, 1), (0, 0, 1, 2),\n",
     " (0, 0, 2, 0), (0, 0, 2, 1), (0, 0, 2, 2), (0, 1, 0, 0), (0, 1, 0, 1), (0, 1, 0, 2),\n",
     " (0, 1, 1, 0), (0, 1, 1, 1), (0, 1, 1, 2), (0, 1, 2, 0), (0, 1, 2, 1), (0, 1, 2, 2),\n",
     " (0, 2, 0, 0), (0, 2, 0, 1), (0, 2, 0, 2), (0, 2, 1, 0), (0, 2, 1, 1), (0, 2, 1, 2),\n",
@@ -76,13 +76,27 @@
     " (2, 0, 2, 0), (2, 0, 2, 1), (2, 0, 2, 2), (2, 1, 0, 0), (2, 1, 0, 1), (2, 1, 0, 2),\n",
     " (2, 1, 1, 0), (2, 1, 1, 1), (2, 1, 1, 2), (2, 1, 2, 0), (2, 1, 2, 1), (2, 1, 2, 2),\n",
     " (2, 2, 0, 0), (2, 2, 0, 1), (2, 2, 0, 2), (2, 2, 1, 0), (2, 2, 1, 1), (2, 2, 1, 2),\n",
-    " (2, 2, 2, 0), (2, 2, 2, 1), (2, 2, 2, 2)]"
+    " (2, 2, 2, 0), (2, 2, 2, 1), (2, 2, 2, 2)]\n",
+    "# vocab = [(0, 0, 0, 0), (0, 0, 0, 1), (0, 0, 0, 2), (0, 0, 1, 0), (0, 0, 1, 1), (0, 0, 1, 2),\n",
+    "#  (0, 0, 2, 0), (0, 0, 2, 1), (0, 0, 2, 2), (0, 1, 0, 0), (0, 1, 0, 1), (0, 1, 0, 2),\n",
+    "#  (0, 1, 1, 0), (0, 1, 1, 1), (0, 1, 1, 2), (0, 1, 2, 0), (0, 1, 2, 1), (0, 1, 2, 2),\n",
+    "#  (0, 2, 0, 0), (0, 2, 0, 1), (0, 2, 0, 2), (0, 2, 1, 0), (0, 2, 1, 1), (0, 2, 1, 2),\n",
+    "#  (0, 2, 2, 0), (0, 2, 2, 1), (0, 2, 2, 2), (1, 0, 0, 0), (1, 0, 0, 1), (1, 0, 0, 2),\n",
+    "#  (1, 0, 1, 0), (1, 0, 1, 1), (1, 0, 1, 2), (1, 0, 2, 0), (1, 0, 2, 1), (1, 0, 2, 2),\n",
+    "#  (1, 1, 0, 0), (1, 1, 0, 1), (1, 1, 0, 2), (1, 1, 1, 0), (1, 1, 1, 1), (1, 1, 1, 2),\n",
+    "#  (1, 1, 2, 0), (1, 1, 2, 1), (1, 1, 2, 2), (1, 2, 0, 0), (1, 2, 0, 1), (1, 2, 0, 2),\n",
+    "#  (1, 2, 1, 0), (1, 2, 1, 1), (1, 2, 1, 2), (1, 2, 2, 0), (1, 2, 2, 1), (1, 2, 2, 2),\n",
+    "#  (2, 0, 0, 0), (2, 0, 0, 1), (2, 0, 0, 2), (2, 0, 1, 0), (2, 0, 1, 1), (2, 0, 1, 2),\n",
+    "#  (2, 0, 2, 0), (2, 0, 2, 1), (2, 0, 2, 2), (2, 1, 0, 0), (2, 1, 0, 1), (2, 1, 0, 2),\n",
+    "#  (2, 1, 1, 0), (2, 1, 1, 1), (2, 1, 1, 2), (2, 1, 2, 0), (2, 1, 2, 1), (2, 1, 2, 2),\n",
+    "#  (2, 2, 0, 0), (2, 2, 0, 1), (2, 2, 0, 2), (2, 2, 1, 0), (2, 2, 1, 1), (2, 2, 1, 2),\n",
+    "#  (2, 2, 2, 0), (2, 2, 2, 1), (2, 2, 2, 2)]"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-25T23:11:16.889300Z",
-     "start_time": "2024-11-25T23:11:16.881826Z"
+     "end_time": "2024-11-26T00:43:04.086054Z",
+     "start_time": "2024-11-26T00:43:04.078659Z"
     }
    },
    "execution_count": 2
@@ -142,8 +156,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-25T23:11:18.755570Z",
-     "start_time": "2024-11-25T23:11:18.750232Z"
+     "end_time": "2024-11-26T00:43:04.091217Z",
+     "start_time": "2024-11-26T00:43:04.086973Z"
     }
    },
    "execution_count": 3
@@ -177,8 +191,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-25T23:11:19.673874Z",
-     "start_time": "2024-11-25T23:11:19.580865Z"
+     "end_time": "2024-11-26T00:43:04.203446Z",
+     "start_time": "2024-11-26T00:43:04.092659Z"
     }
    },
    "execution_count": 4
@@ -199,24 +213,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-25T23:11:20.605820Z",
-     "start_time": "2024-11-25T23:11:20.603651Z"
+     "end_time": "2024-11-26T00:43:06.195581Z",
+     "start_time": "2024-11-26T00:43:06.193332Z"
     }
    },
    "execution_count": 5
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/f1/_ms7qx4d60l1h90fct4z9n5m0000gp/T/ipykernel_14138/791153025.py:30: RuntimeWarning: invalid value encountered in divide\n",
-      "  matrix = (matrix - mean) / std\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# process the pcaps, create the token count matrix ready to pass into the model\n",
     "\n",
@@ -232,12 +237,12 @@
     "lang1_counts = [count_tuples(t) for t in lang1_tuples]\n",
     "lang2_counts = [count_tuples(t) for t in lang2_tuples]\n",
     "\n",
-    "m1 = np.asmatrix(lang1_counts)\n",
+    "m1 = np.array([np.array(xi) for xi in lang1_counts])\n",
     "n, _ = m1.shape\n",
     "zeros = np.zeros((n, 1))\n",
     "m1 = np.hstack((zeros, m1))\n",
     "\n",
-    "m2 = np.asmatrix(lang2_counts)\n",
+    "m2 = np.array([np.array(xi) for xi in lang2_counts])\n",
     "n, _ = m2.shape\n",
     "ones = np.ones((n, 1))\n",
     "m2 = np.hstack((ones, m2))\n",
@@ -247,20 +252,25 @@
     "mean = matrix.mean(axis = 0)\n",
     "std = matrix.std(axis = 0)\n",
     "\n",
-    "matrix = (matrix - mean) / std\n",
-    "\n",
+    "for i in range(matrix.shape[1]):\n",
+    "    if std[i] != 0:\n",
+    "        m = mean[i]\n",
+    "        s = std[i]\n",
+    "        sub = (matrix[:, i] - mean[i])\n",
+    "        div = sub / std[i]\n",
+    "        matrix[:, i] = (matrix[:, i] - mean[i]) / std[i]\n",
     "langdata[:, 1:] = matrix\n",
     "\n",
     "assert langdata.shape == ((len(lang1_counts) + len(lang2_counts)), 1 + len(vocab))"
    ],
    "metadata": {
     "collapsed": false,
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2024-11-25T23:41:59.933312Z",
-     "start_time": "2024-11-25T23:41:56.722089Z"
+     "start_time": "2024-11-26T00:43:10.907512Z"
     }
    },
-   "execution_count": 19
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -301,8 +311,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-25T23:11:37.565489Z",
-     "start_time": "2024-11-25T23:11:37.555882Z"
+     "end_time": "2024-11-26T00:20:41.376673Z",
+     "start_time": "2024-11-26T00:20:41.369636Z"
     }
    },
    "execution_count": 7
@@ -352,9 +362,10 @@
     "    C) backprop\n",
     "    D) update the parameters\n",
     "    \"\"\"\n",
-    "    optimizer.zero_grad()\n",
+    "    \n",
     "    prediction = model(inputs)\n",
     "    loss = criterion(prediction, labels)\n",
+    "    optimizer.zero_grad()\n",
     "    loss.backward()\n",
     "    optimizer.step()\n",
     "\n",
@@ -366,8 +377,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-25T23:11:42.134761Z",
-     "start_time": "2024-11-25T23:11:42.127402Z"
+     "end_time": "2024-11-26T00:20:47.679174Z",
+     "start_time": "2024-11-26T00:20:47.671625Z"
     }
    },
    "execution_count": 8
@@ -385,8 +396,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-25T23:12:05.245424Z",
-     "start_time": "2024-11-25T23:12:05.235645Z"
+     "end_time": "2024-11-26T00:20:50.759228Z",
+     "start_time": "2024-11-26T00:20:50.755358Z"
     }
    },
    "execution_count": 9
@@ -410,8 +421,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-25T23:12:06.568096Z",
-     "start_time": "2024-11-25T23:12:06.012439Z"
+     "end_time": "2024-11-26T00:20:55.974362Z",
+     "start_time": "2024-11-26T00:20:55.484921Z"
     }
    },
    "execution_count": 10
@@ -426,14 +437,13 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[16], line 33\u001B[0m\n\u001B[1;32m     30\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m epoch \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(num_epochs):\n\u001B[1;32m     31\u001B[0m   \u001B[38;5;28;01mfor\u001B[39;00m ex, (inputs, labels) \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28menumerate\u001B[39m(train_loader):\n\u001B[1;32m     32\u001B[0m     \u001B[38;5;66;03m# Run your training process\u001B[39;00m\n\u001B[0;32m---> 33\u001B[0m     \u001B[43mstep\u001B[49m\u001B[43m(\u001B[49m\u001B[43mepoch\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mex\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mlogreg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43moptimizer\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcriterion\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43minputs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mlabels\u001B[49m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[0;32mIn[16], line 24\u001B[0m, in \u001B[0;36mstep\u001B[0;34m(epoch, ex, model, optimizer, criterion, inputs, labels)\u001B[0m\n\u001B[1;32m     21\u001B[0m loss\u001B[38;5;241m.\u001B[39mbackward()\n\u001B[1;32m     22\u001B[0m optimizer\u001B[38;5;241m.\u001B[39mstep()\n\u001B[0;32m---> 24\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m (\u001B[43mex\u001B[49m\u001B[38;5;241m+\u001B[39m\u001B[38;5;241m1\u001B[39m) \u001B[38;5;241m%\u001B[39m \u001B[38;5;241m20\u001B[39m \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m0\u001B[39m:\n\u001B[1;32m     25\u001B[0m   acc_train \u001B[38;5;241m=\u001B[39m model\u001B[38;5;241m.\u001B[39mevaluate(train)\n\u001B[1;32m     26\u001B[0m   acc_test \u001B[38;5;241m=\u001B[39m model\u001B[38;5;241m.\u001B[39mevaluate(test)\n",
-      "Cell \u001B[0;32mIn[16], line 24\u001B[0m, in \u001B[0;36mstep\u001B[0;34m(epoch, ex, model, optimizer, criterion, inputs, labels)\u001B[0m\n\u001B[1;32m     21\u001B[0m loss\u001B[38;5;241m.\u001B[39mbackward()\n\u001B[1;32m     22\u001B[0m optimizer\u001B[38;5;241m.\u001B[39mstep()\n\u001B[0;32m---> 24\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m (\u001B[43mex\u001B[49m\u001B[38;5;241m+\u001B[39m\u001B[38;5;241m1\u001B[39m) \u001B[38;5;241m%\u001B[39m \u001B[38;5;241m20\u001B[39m \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m0\u001B[39m:\n\u001B[1;32m     25\u001B[0m   acc_train \u001B[38;5;241m=\u001B[39m model\u001B[38;5;241m.\u001B[39mevaluate(train)\n\u001B[1;32m     26\u001B[0m   acc_test \u001B[38;5;241m=\u001B[39m model\u001B[38;5;241m.\u001B[39mevaluate(test)\n",
+      "Cell \u001B[0;32mIn[11], line 8\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m epoch \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(num_epochs):\n\u001B[1;32m      6\u001B[0m   \u001B[38;5;28;01mfor\u001B[39;00m ex, (inputs, labels) \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28menumerate\u001B[39m(train_loader):\n\u001B[1;32m      7\u001B[0m     \u001B[38;5;66;03m# Run your training process\u001B[39;00m\n\u001B[0;32m----> 8\u001B[0m     \u001B[43mstep\u001B[49m(epoch, ex, logreg, optimizer, criterion, inputs, labels)\n",
+      "Cell \u001B[0;32mIn[11], line 8\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m epoch \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(num_epochs):\n\u001B[1;32m      6\u001B[0m   \u001B[38;5;28;01mfor\u001B[39;00m ex, (inputs, labels) \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28menumerate\u001B[39m(train_loader):\n\u001B[1;32m      7\u001B[0m     \u001B[38;5;66;03m# Run your training process\u001B[39;00m\n\u001B[0;32m----> 8\u001B[0m     \u001B[43mstep\u001B[49m(epoch, ex, logreg, optimizer, criterion, inputs, labels)\n",
       "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_39_64.pyx:1187\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_39_64.SafeCallWrapper.__call__\u001B[0;34m()\u001B[0m\n",
       "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_39_64.pyx:627\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_39_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
-      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_39_64.pyx:1103\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_39_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
-      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_39_64.pyx:1061\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_39_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
-      "File \u001B[0;32m/Applications/PyCharm.app/Contents/plugins/python/helpers-pro/jupyter_debug/pydev_jupyter_plugin.py:169\u001B[0m, in \u001B[0;36mstop\u001B[0;34m(plugin, pydb, frame, event, args, stop_info, arg, step_cmd)\u001B[0m\n\u001B[1;32m    167\u001B[0m     frame \u001B[38;5;241m=\u001B[39m suspend_jupyter(main_debugger, thread, frame, step_cmd)\n\u001B[1;32m    168\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m frame:\n\u001B[0;32m--> 169\u001B[0m         \u001B[43mmain_debugger\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdo_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mthread\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    170\u001B[0m         \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m\n\u001B[1;32m    171\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;01mFalse\u001B[39;00m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_39_64.pyx:937\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_39_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_39_64.pyx:928\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_39_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_39_64.pyx:585\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_39_64.PyDBFrame.do_wait_suspend\u001B[0;34m()\u001B[0m\n",
       "File \u001B[0;32m/Applications/PyCharm.app/Contents/plugins/python/helpers/pydev/pydevd.py:1184\u001B[0m, in \u001B[0;36mPyDB.do_wait_suspend\u001B[0;34m(self, thread, frame, event, arg, send_suspend_message, is_unhandled_exception)\u001B[0m\n\u001B[1;32m   1181\u001B[0m         from_this_thread\u001B[38;5;241m.\u001B[39mappend(frame_id)\n\u001B[1;32m   1183\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_threads_suspended_single_notification\u001B[38;5;241m.\u001B[39mnotify_thread_suspended(thread_id, stop_reason):\n\u001B[0;32m-> 1184\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_do_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mthread\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msuspend_type\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfrom_this_thread\u001B[49m\u001B[43m)\u001B[49m\n",
       "File \u001B[0;32m/Applications/PyCharm.app/Contents/plugins/python/helpers/pydev/pydevd.py:1199\u001B[0m, in \u001B[0;36mPyDB._do_wait_suspend\u001B[0;34m(self, thread, frame, event, arg, suspend_type, from_this_thread)\u001B[0m\n\u001B[1;32m   1196\u001B[0m             \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_call_mpl_hook()\n\u001B[1;32m   1198\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mprocess_internal_commands()\n\u001B[0;32m-> 1199\u001B[0m         \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m0.01\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1201\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcancel_async_evaluation(get_current_thread_id(thread), \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mid\u001B[39m(frame)))\n\u001B[1;32m   1203\u001B[0m \u001B[38;5;66;03m# process any stepping instructions\u001B[39;00m\n",
       "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
@@ -453,11 +463,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-25T23:17:32.480714Z",
-     "start_time": "2024-11-25T23:14:53.560358Z"
+     "end_time": "2024-11-26T00:25:04.888969Z",
+     "start_time": "2024-11-26T00:20:58.762781Z"
     }
    },
-   "execution_count": 16
+   "execution_count": 11
   },
   {
    "cell_type": "code",
@@ -468,13 +478,9 @@
     "logreg.inspect(vocab)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-21T05:49:29.603072Z",
-     "start_time": "2024-11-21T05:49:29.599976Z"
-    }
+    "collapsed": false
    },
-   "execution_count": 38
+   "execution_count": null
   },
   {
    "cell_type": "code",
